# cdk-validium-node

./: .gitignore  Makefile  README.md  docker-compose.yml  flake.nix  go.mod  go.sum
docker/sp1-prover/: Dockerfile
docs/: json-rpc-endpoints.md  modes.md  zkEVM-custom-endpoints.md
docs/ci/: actions.md  groups.md  opsman.md
docs/config-file/: node-config-doc.md
sp1-prover/: Cargo.toml  build.rs
sp1-prover/src/: aggregator.rs  config.rs  executor_service.rs  hashdb_service.rs  lib.rs
sp1-prover/src/data/: mocked_data.json  mocked_sp1_data.json
test/: Makefile  docker-compose.yml
