[package]
name = "sp1-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive", "env", "string"] }
protobuf = "3.5.0"
anyhow = "1.0.86"
url = "2.3"
tonic = "0.12.1"
tokio = "1.0.0"
tokio-stream = "0.1.15"
prost = "0.13"
rand = "0.8.5"
hex = "0.4.3"
serde_json = "1.0"
# future import of zkrollup-integration utils
fibonacci-script = { git = "ssh://git@github.com/EspressoSystems/zkrollup-integration.git", version = "0.1.0" }

[build-dependencies]
tonic-build = "0.12.1"
